/*
 * Copyright (c) 2020, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

import org.apache.tools.ant.taskdefs.condition.Os
import org.gradle.process.ExecOperations
import org.gradle.jvm.toolchain.JavaLanguageVersion
import org.gradle.jvm.toolchain.JavaToolchainService
import javax.inject.Inject

abstract class BallerinaExecHelper {
    @Inject abstract ExecOperations getExecOperations()
}

abstract class PatchBallerinaScriptsTask extends DefaultTask {
    @Inject abstract JavaToolchainService getJavaToolchainService()
    @Input abstract Property<String> getJballerinaToolsBinPath()
    @Input abstract Property<String> getBallerinaRuntimeBinPath()

    @TaskAction
    void patch() {
        def launcher = javaToolchainService.launcherFor { spec ->
            spec.languageVersion.set(JavaLanguageVersion.of(25))
        }.get()
        def java25Home = launcher.executablePath.asFile.parentFile.parentFile.absolutePath

        [new File(jballerinaToolsBinPath.get()), new File(ballerinaRuntimeBinPath.get())].each { binDir ->
            if (binDir.exists()) {
                binDir.eachFile { file ->
                    file.setExecutable(true)
                    if (!file.name.endsWith('.bat') && !file.name.endsWith('.cmd')) {
                        def original = file.text
                        def lines = original.split('\n').toList()
                        lines = lines.collect { it.replace('--sun-misc-unsafe-memory-access=allow', '').trim() }.findAll { !it.isEmpty() }
                        def shebangIdx = lines.findIndexOf { it.startsWith('#!') }
                        if (shebangIdx >= 0 && !lines.any { it.startsWith('export JAVA_HOME=') }) {
                            lines.add(shebangIdx + 1, "export JAVA_HOME='${java25Home}'")
                        }
                        def patched = lines.join('\n') + '\n'
                        if (patched != original) { file.text = patched }
                    }
                }
            }
        }
    }
}

plugins {
    id 'io.ballerina.plugin'
}

description = 'Ballerina - TCP Ballerina Generator'

def packageName = "tcp"
def packageOrg = "ballerina"
def tomlVersion = stripBallerinaExtensionVersion("${project.version}")
def ballerinaTomlFilePlaceHolder = new File("${project.rootDir}/build-config/resources/Ballerina.toml")
def compilerPluginTomlFilePlaceHolder = new File("${project.rootDir}/build-config/resources/CompilerPlugin.toml")
def ballerinaTomlFile = new File("$project.projectDir/Ballerina.toml")
def compilerPluginTomlFile = new File("$project.projectDir/CompilerPlugin.toml")

def stripBallerinaExtensionVersion(String extVersion) {
    if (extVersion.matches(project.ext.timestampedVersionRegex)) {
        def splitVersion = extVersion.split('-')
        if (splitVersion.length > 3) {
            def strippedValues = splitVersion[0..-4]
            return strippedValues.join('-')
        } else {
            return extVersion
        }
    } else {
        return extVersion.replace("${project.ext.snapshotVersion}", "")
    }
}

ballerina {
    packageOrganization = packageOrg
    module = packageName
    langVersion = ballerinaLangVersion
}

configurations {
    externalJars
}

dependencies {
    externalJars(group: 'io.netty', name: 'netty-buffer', version: "${nettyVersion}") {
        transitive = false
    }
    externalJars(group: 'io.netty', name: 'netty-handler', version: "${nettyVersion}") {
        transitive = false
    }
    externalJars(group: 'io.netty', name: 'netty-transport', version: "${nettyVersion}") {
        transitive = false
    }
    externalJars(group: 'io.netty', name: 'netty-common', version: "${nettyVersion}") {
        transitive = false
    }
    externalJars(group: 'io.netty', name: 'netty-resolver', version: "${nettyVersion}") {
        transitive = false
    }
    externalJars(group: 'io.netty', name: 'netty-codec', version: "${nettyVersion}") {
        transitive = false
    }
    externalJars(group: 'io.netty', name: 'netty-transport-native-unix-common', version: "${nettyVersion}") {
        transitive = false
    }
    externalJars(group: 'io.netty', name: 'netty-codec-socks', version: "${nettyVersion}") {
        transitive = false
    }
    externalJars(group: 'at.yawk.lz4', name: 'lz4-java', version: "${lz4Version}") {
        transitive = false
    }
    externalJars(group: 'org.jboss.marshalling', name: 'jboss-marshalling', version: "${marshallingVersion}") {
        transitive = false
    }
    externalJars(group: 'com.google.protobuf', name: 'protobuf-java', version: "${protobufVersion}") {
        transitive = false
    }
}

task updateTomlFiles {
    doLast {
        def nettyVersion = project.nettyVersion
        def stdlibDependentLz4Version = project.lz4Version
        def stdlibDependentMarshallingVersion = project.marshallingVersion
        def stdlibDependentProtobufVersion = project.protobufVersion

        def newConfig = ballerinaTomlFilePlaceHolder.text.replace("@project.version@", project.version)
        newConfig = newConfig.replace("@toml.version@", tomlVersion)
        newConfig = newConfig.replace("@netty.version@", nettyVersion)
        newConfig = newConfig.replace("@lz4.version@", stdlibDependentLz4Version)
        newConfig = newConfig.replace("@marshalling.version@", stdlibDependentMarshallingVersion)
        newConfig = newConfig.replace("@protobuf.version@", stdlibDependentProtobufVersion)
        ballerinaTomlFile.text = newConfig

        def newPluginConfig = compilerPluginTomlFilePlaceHolder.text.replace("@project.version@", project.version)
        compilerPluginTomlFile.text = newPluginConfig
    }
}

task commitTomlFiles {
    def execHelper = project.objects.newInstance(BallerinaExecHelper)
    doLast {
        execHelper.execOperations.exec {
            ignoreExitValue true
            if (Os.isFamily(Os.FAMILY_WINDOWS)) {
                commandLine 'cmd', '/c', "git commit -m \"[Automated] Update the native jar versions\" Ballerina.toml Dependencies.toml CompilerPlugin.toml"
            } else {
                commandLine 'sh', '-c', "git commit -m '[Automated] Update the native jar versions' Ballerina.toml Dependencies.toml CompilerPlugin.toml"
            }
        }
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            artifact source: createArtifactZip, extension: 'zip'
        }
    }

    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/ballerina-platform/module-ballerina-${packageName}")
            credentials {
                username = System.getenv("publishUser")
                password = System.getenv("publishPAT")
            }
        }
    }
}

task patchBallerinaScripts(type: PatchBallerinaScriptsTask) {
    dependsOn 'unpackJballerinaTools'
}

updateTomlFiles.dependsOn copyStdlibs

build.dependsOn "generatePomFileForMavenPublication"
build.dependsOn ":${packageName}-native:build"
build.dependsOn ":${packageName}-test-utils:build"
build.dependsOn ":${packageName}-compiler-plugin:build"
build.dependsOn patchBallerinaScripts
test.dependsOn ":${packageName}-native:build"
test.dependsOn ":${packageName}-test-utils:build"
test.dependsOn ":${packageName}-compiler-plugin:build"
test.dependsOn patchBallerinaScripts
copyStdlibs.dependsOn patchBallerinaScripts

publishToMavenLocal.dependsOn build
publish.dependsOn build
